@@ -1,6 +1,7 @@
 0.4.14 (in development)
 ------------------------------------------------------------------------
 - Change: [#21659] Increase the Hybrid Roller Coaster’s maximum lift speed to 17 km/h (11 mph).
+- Change: [#22466] The Clear Scenery tool now uses a bulldozer cursor instead of a generic crosshair.
 
 0.4.13 (2024-08-04)
 ------------------------------------------------------------------------
